# SpartanLIFT

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dependency_list.txt  pyproject.toml  requirements.txt
.github/workflows/: main.yml
doc/: Architecture.md  Development notes.md  Doxyfile  Naming convention.md  warnings.md
src/cargo/: CMakeLists.txt  package.xml
src/cargo/env-hooks/: cargo.dsv.in
src/cargo/include/cargo/: cargo.hpp  logger.tpp  templates.tpp  types.hpp
src/cargo/models/box_w_handles/: model.sdf
src/cargo/src/: cargo.cpp  logger.cpp  main.cpp  setters.cpp  types.cpp
src/comms/: CMakeLists.txt  package.xml
src/comms/action/: TeleopData.action
src/comms/include/: visibility_control.h
src/comms/msg/: Command.msg  Datapad.msg  FleetSync.msg  FormationDesired.msg  Heartbeat.msg  NetworkVertex.msg  POI.msg  Proposal.msg  RequestVoteRPC.msg  Status.msg
src/comms/srv/: CargoLinkage.srv  CargoPoint.srv  Contact.srv  FleetInfo.srv  FleetInfoExchange.srv  FormationReached.srv  TeleopData.srv
src/datapad/: CMakeLists.txt  package.xml
src/datapad/include/datapad/: datapad.hpp  logger.hpp  logger.tpp  templates.tpp  types.hpp
src/datapad/src/: datapad.cpp  functionalities.cpp  getters.cpp  logger.cpp  main.cpp  setters.cpp  types.cpp
src/datapad/test/include/: fixtures.hpp
src/datapad/test/src/: datapad_tests.cpp  fixtures.cpp
src/odst/: package.xml  setup.cfg  setup.py
src/odst/config/: cargo.yaml  fleet.yaml  nominal.yaml
src/odst/doc/: Development notes.md
src/odst/launch/: any_model_spawn.launch.py  cargo.launch.py  cargo_manual.launch.py  copter_manual.launch.py  fleet.launch.py  fleet_launch.launch.py  fleet_only_election.launch.py  ros_agents.launch.py  single_agent_gazebo.launch.py  spawn_world.launch.py  x3_spawn.launch.py  x4_spawn.launch.py
src/odst/odst/: handlers.py  helpers.py  logs.py
src/odst/resource/: include_px4_models.sh
src/pelican/: CMakeLists.txt  package.xml
src/pelican/config/: copter1.yaml  copter2.yaml  copter3.yaml  copter4.yaml  copter5.yaml  copter_test.yaml  fleet.yaml
src/pelican/doc/: Architecture.md  Development notes.md  Naming convention.md
src/pelican/env-hooks/: pelican.dsv.in
src/pelican/include/pelican/: constants.hpp  election.hpp  election_templates.tpp  fixtures.hpp  heartbeat.hpp  heartbeat_templates.tpp  logger.hpp  logger.tpp  pelican.hpp  pelican_logger.tpp  pelican_templates.tpp  templates.tpp  types.hpp  utilities.hpp
src/pelican/include/pelican/ElectionModule/: election.hpp  election_templates.tpp
src/pelican/include/pelican/HeartbeatModule/: heartbeat.hpp  heartbeat_templates.tpp
src/pelican/include/pelican/LoggerModule/: logger.hpp  logger.tpp
src/pelican/include/pelican/PelicanModule/: pelican.hpp  pelican_templates.tpp
src/pelican/include/pelican/TacMapModule/: tacmap.hpp  tacmap_template.tpp
src/pelican/include/pelican/UNSCModule/: unsc.hpp  unsc_template.tpp
src/pelican/launch/: x4_spawn.launch.py
src/pelican/models/: README.md
src/pelican/models/X3/: model.config  model.sdf
src/pelican/models/X4/: model.sdf
src/pelican/models/X4/meshes/: neo11_propeller_ccw.dae  neo11_propeller_cw.dae
src/pelican/models/emesent_hovermap/: metadata.pbtxt  model.config  model.sdf
src/pelican/models/emesent_hovermap/meshes/: ST-LIDAR-case-2.dae  ST-LIDAR-case.dae  ST-LIDAR-hipoly.dae  ST-LIDAR.dae  gimbal_pan.dae  gimbal_roll.dae  gimbal_tilt.dae  navi-14in-CCW-tex.dae  navi-14in-CW-tex.dae  navi-15in-CCW-tex.dae  navi-15in-CW-tex.dae  navi-drone-hipoly-mount.dae  navi-drone-hipoly.dae  navi-guard.dae  navi-test.dae
src/pelican/models/typhoon_h480/: model.config  model.sdf
src/pelican/models/x500/: model.sdf
src/pelican/models/x500/meshes/: 5010Base.dae  5010Bell.dae
src/pelican/src/: checkers.cpp  election.cpp  election_checkers.cpp  election_getters.cpp  election_setters.cpp  getters.cpp  heartbeat.cpp  heartbeat_getters.cpp  logger.cpp  main.cpp  pelican.cpp  pelican_checkers.cpp  pelican_election.cpp  pelican_getters.cpp  pelican_heartbeat.cpp  pelican_main.cpp  pelican_node.cpp  pelican_roles.cpp  pelican_setters.cpp  roles.cpp  setters.cpp  types.cpp  utilities.cpp
src/pelican/src/ElectionModule/: checkers.cpp  election.cpp  external_comms.cpp  getters.cpp  setters.cpp
src/pelican/src/HeartbeatModule/: external_comms.cpp  getters.cpp  heartbeat.cpp
src/pelican/src/LoggerModule/: logger.cpp
src/pelican/src/PelicanModule/: commands.cpp  getters.cpp  module_comms.cpp  pelican.cpp  roles.cpp  setters.cpp
src/pelican/src/TacMapModule/: control.cpp  data.cpp  external_comms.cpp  getters.cpp  receiver.cpp  setters.cpp  tacmap.cpp  transmitter.cpp
src/pelican/src/UNSCModule/: algorithms.cpp  checkers.cpp  control.cpp  external_comms.cpp  getters.cpp  setters.cpp  unsc.cpp
src/pelican/test/: behavior_test.cpp  fixtures.cpp  getters_test.cpp  main.cpp  smoke.cpp
src/pelican/test/include/: fixtures.hpp
src/pelican/test/src/: behavior_tests.cpp  election_tests.cpp  fixtures.cpp  getters_tests.cpp  heartbeat_tests.cpp  logger_tests.cpp  pelican_tests.cpp  smoke.cpp  tacmap_tests.cpp  unsc_tests.cpp
src/reach/: CMakeLists.txt  package.xml
src/reach/env-hooks/: reach.dsv.in
src/reach/worlds/tugbot_depot/: tugbot_depot.sdf
src/reach/worlds/tugbot_warehouse/: tugbot_warehouse.sdf
thesis_ws/src/cargo/: CMakeLists.txt
thesis_ws/src/cargo/launch/: cargo_spawn.launch.py
thesis_ws/src/cargo/models/box_w_handles/: model.config
thesis_ws/src/pelican/: CMakeLists.txt  package.xml
thesis_ws/src/pelican/description/X3/: model.config
thesis_ws/src/pelican/description/X4/: model.sdf
thesis_ws/src/pelican/env-hooks/: pelican.dsv.in
thesis_ws/src/pelican/launch/: x3_spawn.launch.py  x4_spawn.launch.py
thesis_ws/src/reach/: CMakeLists.txt  package.xml
thesis_ws/src/reach/description/tugbot_depot/: tugbot_depot.sdf
thesis_ws/src/reach/launch/: spawn_world.launch.py
utilities/: discover_dependencies.sh  example.py  form_analysis.py  le_analysis.py  plotting.py  rend_analysis.py
(+1 files in other folders)
