<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cargo</name>
  <version>0.1.0</version> <!-- TODO: update when releasing to the public -->
  <description>Package for everything related to the payloads used</description>
  <author email="slim71sv@gmail.com">Simone Vollaro</author>
  <maintainer email="slim71sv@gmail.com">Simone Vollaro</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
