<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pelican</name>
  <version>0.1.0</version>
  <description>Package for everything related to the UAVs used</description>
  <author email="slim71sv@gmail.com">Simone Vollaro</author>
  <maintainer email="slim71sv@gmail.com">Simone Vollaro</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ros_environment</build_depend>
  <build_depend>eigen</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <depend>rclcpp</depend>
  <depend>comms</depend>
  <depend>px4_msgs</depend>
  <depend>tf2</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
